--- a/templates/security/password_lost_reset.html.twig
+++ b/templates/security/password_lost_reset.html.twig
@@ -6,10 +6,9 @@
 
     {% include 'shared/_flash.html.twig' %}
 
-    <div class="py-12 my-12 bg-white dark:bg-gray-700">
-        <div class="max-w-lg mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="max-w-lg min-h-screen/80 mx-auto px-4">
 
-            <h1 class="mt-5 text-5xl dark:text-white text-center">Réinitialisez votre mot de passe</h1>
+            <h1 class="mt-32 text-5xl dark:text-white text-center">Réinitialisez votre mot de passe</h1>
 
             {{ form_start(form) }}
             {{ form_errors(form) }}
@@ -19,7 +18,5 @@
             </button>
             {{ form_end(form) }}
         </div>
-    </div>
-
 
 {% endblock %}
