--- a/templates/_tricks.html.twig
+++ b/templates/_tricks.html.twig
@@ -1,7 +1,7 @@
 {% for trick in tricks %}
     <div id="{{ trick.slug }}"
          data-trick-url="{{ trick.slug }}"
-         class="shadow-2xl rounded-2xl bg-white dark:bg-gray-800">
+         class="shadow-2xl rounded-2xl bg-white dark:bg-gray-700">
 
         <div class="relative">
             <div class="flex p-1 absolute right-2 top-2 bg-white rounded">
@@ -16,16 +16,17 @@
                 {{ trick.title }}
             </h3>
             <div class="text-center mb-3">
-                <span class="mx-auto bg-gray-100 dark:bg-gray-900 dark:text-gray-100 rounded-md px-2 py-1 text-sm">{{ trick.category.name }}</span>
+                <span class="mx-auto bg-gray-100 dark:bg-gray-900 dark:text-gray-100 rounded-md px-2 py-1 text-sm">
+                    {{ trick.category.name }}
+                </span>
             </div>
             <div class="p-3 text-center">
                 <a href="{{ path('show_trick', {'slug' : trick.slug}) }}">
-                    <button class="rounded-md mx-auto bg-gray-900 dark:bg-gray-100 dark:text-black text-white px-6 py-3">
+                    <button class="rounded-md mx-auto bg-gray-900 dark:bg-gray-200 dark:text-black text-white px-6 py-3">
                         Voir le trick
                     </button>
                 </a>
             </div>
         </div>
-
     </div>
 {% endfor %}
