--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,8 +13,9 @@
         {{ encore_entry_script_tags('all-pages') }}
     {% endblock %}
 </head>
-<body class="bg-gray-100 dark:bg-gray-800">
+<body class="bg-gray-200 dark:bg-gray-800">
 {% include 'shared/_navbar.html.twig' %}
 {% block body %}{% endblock %}
+{% include 'shared/_footer.html.twig' %}
 </body>
 </html>
