--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,34 +4,32 @@
 
 {% block body %}
 
-    {% include 'shared/_flash.html.twig' %}
+    <div class="max-w-lg min-h-screen/80 mx-auto px-4">
 
-    <div class="py-12 my-12 bg-white dark:bg-gray-700">
-        <div class="max-w-lg mx-auto px-4 sm:px-6 lg:px-8">
+        {% include 'shared/_flash.html.twig' %}
 
-            <h1 class="mt-5 text-5xl dark:text-white text-center">Connexion</h1>
+        <h1 class="mt-32 text-5xl dark:text-white text-center">Connexion</h1>
 
-            {% if error %}
-                <div class="mt-8 text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+        {% if error %}
+            <div class="mt-8 text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-            {{ form_start(form) }}
-            {{ form_errors(form) }}
-            {{ form_row(form.username) }}
-            {{ form_row(form.password) }}
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.password) }}
 
-            <a class="block mt-5 text-gray-400" href="{{ path('security_password_lost_request') }}">
-                Mot de passe oublié
-            </a>
+        <a class="block mt-5 text-gray-400" href="{{ path('security_password_lost_request') }}">
+            Mot de passe oublié
+        </a>
 
-            <a class="block mt-5 text-gray-400" href="{{ path('security_registration') }}">S'inscrire</a>
+        <a class="block mt-5 text-gray-400" href="{{ path('security_registration') }}">S'inscrire</a>
 
-            <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
-                    type="submit">Se connecter
-            </button>
+        <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
+                type="submit">Se connecter
+        </button>
 
-            {{ form_end(form) }}
-        </div>
+        {{ form_end(form) }}
     </div>
 
 {% endblock %}
