--- a/templates/trick/delete.html.twig
+++ b/templates/trick/delete.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
 
-    {% include 'shared/_flash.html.twig' %}
+    <div class="max-w-7xl py-5 px-5 mx-auto min-h-screen/90">
 
-    <h1 class="text-2xl mt-12 mx-auto text-center text-grey-800 dark:text-white">
-        Supprimer le trick
-    </h1>
+        {% include 'shared/_flash.html.twig' %}
 
-    <div class="py-12 my-12 bg-white dark:bg-gray-700">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h1 class="text-2xl mt-12 mx-auto text-center text-grey-800 dark:text-white">
+            Supprimer le trick
+        </h1>
+
         <h2 class="text-2xl mt-12 mx-auto text-center text-grey-800 dark:text-white">
             Êtes-vous sûr de vouloir supprimer le trick :<br>"{{ trick.title }}" ?
         </h2>
