--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -37,13 +37,15 @@
                     <div class="flex space-x-4">
                         <a href="{{ menu1Link }}"
                            class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu1 }}</a>
-                        <a href="{{ menu2Link }}"
-                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu2 }}</a>
-                        <a href="{{ menu3Link }}"
-                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu3 }}</a>
-                        <a href="{{ menu4Link }}"
-                           class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu4 }}</a>
-
+                        {% if is_granted('ROLE_USER') %}
+                            <a href="{{ menu4Link }}"
+                               class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu4 }}</a>
+                        {% else %}
+                            <a href="{{ menu2Link }}"
+                               class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu2 }}</a>
+                            <a href="{{ menu3Link }}"
+                               class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu3 }}</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
