--- a/templates/trick/single.html.twig
+++ b/templates/trick/single.html.twig
@@ -9,9 +9,11 @@
         <h1 class="absolute text-shadow text-4xl mx-auto text-center text-gray-100">
             {{ trick.title }}
         </h1>
-        <div class="flex absolute top-5 right-5 p-1 bg-white rounded shadow-xl">
-            {% include '_delete_edit_trick_icons.html.twig' %}
-        </div>
+        {% if is_granted('ROLE_USER') %}
+            <div class="flex absolute top-5 right-5 p-1 bg-white rounded shadow-xl">
+                {% include '_delete_edit_trick_icons.html.twig' %}
+            </div>
+        {% endif %}
         <div class="absolute bottom-0 w-full">
             {% include 'shared/_flash.html.twig' %}
         </div>
@@ -58,17 +60,22 @@
 
             <hr class="my-8 mx-auto hr-custom">
 
-            <div class="mx-auto px-4 mb-4">
-                {{ form_start(form) }}
-                {{ form_errors(form) }}
-                <div class="md:w-1/2 mx-auto w-full px-5">
-                    {{ form_row(form.content) }}
+            {% if is_granted('ROLE_USER') %}
+                <div class="mx-auto px-4 mb-4">
+                    {{ form_start(form) }}
+                    {{ form_errors(form) }}
+                    <div class="md:w-1/2 mx-auto w-full px-5">
+                        {{ form_row(form.content) }}
+                    </div>
+                    <button class="mt-3 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
+                            type="submit">Envoyer
+                    </button>
+                    {{ form_end(form) }}
                 </div>
-                <button class="mt-3 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
-                        type="submit">Envoyer
-                </button>
-                {{ form_end(form) }}
-            </div>
+            {% else %}
+                <h2 class="text-center text-red-600 text-2xl">Connectez-vous pour déposer un commentaire</h2>
+            {% endif %}
+
 
             <hr class="my-8 mx-auto hr-custom">
 
