--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -6,7 +6,7 @@
 
     <div class="relative text-center">
         <img class="w-full h-screen/80 object-cover block"
-             src="{{ asset('assets/img/banner3.jpg') }}"
+             src="{{ asset('assets/img/banner.jpg') }}"
              alt="Snowtricks Banner">
         <h1 class="absolute text-shadow text-4xl w-full mx-auto text-center text-gray-100 top-28">
             SnowTricks<br>Site communautaire autour des tricks de snowboard
