--- a/templates/trick/create.html.twig
+++ b/templates/trick/create.html.twig
@@ -2,6 +2,8 @@
 
 {% form_theme form _self %}
 
+{% block title %}Snowtricks | Créer un trick{% endblock %}
+
 {% block body %}
 
     {% include 'shared/_flash.html.twig' %}
@@ -88,7 +90,7 @@ VIDEOS
 {% endblock %}
 
 {#
-PICTURE
+PICTURES
 #}
 
 {% block _trick_create_pictures_entry_widget %}
