--- a/templates/trick/edit.html.twig
+++ b/templates/trick/edit.html.twig
@@ -65,7 +65,7 @@
 {% endblock %}
 
 {#
-VIDEO
+VIDEOS
 #}
 
 {% block _trick_edit_videos_entry_widget %}
@@ -104,7 +104,7 @@ VIDEO
 {% endblock %}
 
 {#
-PICTURE
+PICTURES
 #}
 
 {% block _trick_edit_pictures_entry_widget %}
