--- a/templates/security/password_lost_reset.html.twig
+++ b/templates/security/password_lost_reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}Réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
 
@@ -8,15 +8,15 @@
 
     <div class="max-w-lg min-h-screen/80 mx-auto px-4">
 
-            <h1 class="mt-32 text-5xl dark:text-white text-center">Réinitialisez votre mot de passe</h1>
+        <h1 class="mt-32 text-5xl dark:text-white text-center">Réinitialisez votre mot de passe</h1>
 
-            {{ form_start(form) }}
-            {{ form_errors(form) }}
-            {{ form_row(form.password) }}
-            <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
-                    type="submit">Réinitialiser
-            </button>
-            {{ form_end(form) }}
-        </div>
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+        {{ form_row(form.password) }}
+        <button class="mt-8 text-white dark:text-black bg-gray-800 dark:bg-gray-300 rounded-lg text-lg px-2 py-1"
+                type="submit">Réinitialiser
+        </button>
+        {{ form_end(form) }}
+    </div>
 
 {% endblock %}
