--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -10,6 +10,9 @@
 {% set menu4 = "Se deconnecter" %}
 {% set menu4Link = path('logout') %}
 
+{% set menu5 = "Profil" %}
+{% set menu5Link = path('edit_profil') %}
+
 <nav class="bg-gray-900">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
 
@@ -40,6 +43,8 @@
                         {% if is_granted('ROLE_USER') %}
                             <a href="{{ menu4Link }}"
                                class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu4 }}</a>
+                            <a href="{{ menu5Link }}"
+                               class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu5 }}</a>
                         {% else %}
                             <a href="{{ menu2Link }}"
                                class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu2 }}</a>
@@ -66,6 +71,8 @@
             {% if is_granted('ROLE_USER') %}
                 <a href="{{ menu4Link }}"
                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu4 }}</a>
+                <a href="{{ menu5Link }}"
+                   class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">{{ menu5 }}</a>
             {% else %}
                 <a href="{{ menu2Link }}"
                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">{{ menu2 }}</a>
